<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym_labo4.BleActivity">

    <ScrollView
        android:id="@+id/ble_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Time elements -->
            <Button
                android:id="@+id/sendTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSendTime"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:id="@+id/tvTimeLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/tvTime"
                    android:gravity="bottom"/>
            </LinearLayout>
            <!-- Clicks elements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nbClicks"
                    android:id="@+id/tvNbClicksLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/tvNbClicks"
                    android:gravity="bottom"/>
            </LinearLayout>
            <!-- Integer elements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/integer"
                    android:id="@+id/tvInteger"/>
                <EditText
                    android:id="@+id/integerValue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnInteger"
                android:text="@string/btnInteger"/>
            <!-- Temperature elements -->
            <Button
                android:id="@+id/getTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnGetTemperature"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:id="@+id/tvNbTemperatureLabel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/tvNbTemperature"
                    android:gravity="bottom"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/ble_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/ble_scanresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/ble_scanresults_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_empty"
            android:layout_centerInParent="true"
            android:gravity="center" />
    </RelativeLayout>
</RelativeLayout>
